Dropping posts into the foundation template

--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -32,6 +32,7 @@
 <div class="row">
  
 <div class="large-9 columns" role="content">
+<div id="content">
 <article>
 <h3><a href="#">Blog Post Title</a></h3>
 <h6>Written by <a href="#">John Smith</a> on August 12, 2012.</h6>
@@ -64,7 +65,8 @@
 <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
 </article>
 </div>
- 
+</div>
+
  
 <aside class="large-3 columns">
 <h5>Categories</h5>
