Added title, meta stuff

--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -4,10 +4,10 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Foundation Template | Blog</title>
-<meta name="description" content="Documentation and reference library for ZURB Foundation. JavaScript, CSS, components, grid and more."/>
-<meta name="author" content="ZURB, inc. ZURB network also includes zurb.com"/>
-<meta name="copyright" content="ZURB, inc. Copyright (c) 2015"/>
+<title>prose :: and :: conz by joescii</title>
+<meta name="description" content="prose :: and :: conz by joescii"/>
+<meta name="author" content="Joe Barnes"/>
+<meta data-lift="Copyright.meta" name="copyright" content="Joe Barnes. Copyright (c) 2012 - Eternity"/>
 <link rel="stylesheet" href="/css/foundation.css"/>
 <script src="/js/vendor/modernizr.js"></script>
 </head>
@@ -23,7 +23,7 @@
 <li><a href="#" class="button">Link 4</a></li>
 </ul>
 </div>
-<h1>Blog <small>This is my blog. It's awesome.</small></h1>
+<h1>prose :: and :: conz</h1>
 <hr/>
 </div>
 </div>
@@ -91,7 +91,7 @@
 <div class="large-12 columns">
 <hr/>
 <div class="row">
-<div class="large-6 columns">
+<div data-lift="Copyright.footer" class="large-6 columns">
 <p>&copy; Copyright no one at all. Go to town.</p>
 </div>
 <div class="large-6 columns">
