--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -17,10 +17,9 @@
 <div class="large-12 columns">
 <div class="nav-bar right">
 <ul class="button-group">
-<li><a href="#" class="button">Link 1</a></li>
-<li><a href="#" class="button">Link 2</a></li>
-<li><a href="#" class="button">Link 3</a></li>
-<li><a href="#" class="button">Link 4</a></li>
+<li><a href="/" class="button">Home</a></li>
+<li><a href="/archives" class="button">Archives</a></li>
+<li><a href="/about" class="button">About</a></li>
 </ul>
 </div>
 <h1>prose :: and :: conz</h1>
@@ -96,10 +95,9 @@
 </div>
 <div class="large-6 columns">
 <ul class="inline-list right">
-<li><a href="#">Link 1</a></li>
-<li><a href="#">Link 2</a></li>
-<li><a href="#">Link 3</a></li>
-<li><a href="#">Link 4</a></li>
+<li><a href="/">Home</a></li>
+<li><a href="/archives">Archives</a></li>
+<li><a href="/about">About</a></li>
 </ul>
 </div>
 </div>
