--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -68,16 +68,23 @@
 
  
 <aside class="large-3 columns">
-<h5>Categories</h5>
-<ul class="side-nav">
-<li><a href="#">News</a></li>
-<li><a href="#">Code</a></li>
-<li><a href="#">Design</a></li>
-<li><a href="#">Fun</a></li>
-<li><a href="#">Weasels</a></li>
-</ul>
+<h5>Tags</h5>
+  <ul class="side-nav">
+    <li><a href="#">Scala</a></li>
+    <li><a href="#">Functional Programming</a></li>
+    <li><a href="#">Static Typing</a></li>
+    <li><a href="#">Java</a></li>
+    <li><a href="#">Web Development</a></li>
+  </ul>
+<hr>
 <div class="panel">
-<h5>Featured</h5>
+<h5>Latest</h5>
+<p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
+<a href="#">Read More &rarr;</a>
+</div>
+<hr>
+<div class="panel">
+<h5>Random</h5>
 <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
 <a href="#">Read More &rarr;</a>
 </div>
