Adding Tags link

--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -18,7 +18,8 @@
 <div class="nav-bar right">
 <ul class="button-group">
 <li><a href="/" class="button">Home</a></li>
-<li><a href="/archives" class="button">Archives</a></li>
+<li><a href="/tags" class="button">Tags</a></li>
+<li><a href="/archive" class="button">Archive</a></li>
 <li><a href="/about" class="button">About</a></li>
 </ul>
 </div>
@@ -103,7 +104,8 @@
 <div class="large-6 columns">
 <ul class="inline-list right">
 <li><a href="/">Home</a></li>
-<li><a href="/archives">Archives</a></li>
+<li><a href="/tags">Tags</a></li>
+<li><a href="/archive">Archive</a></li>
 <li><a href="/about">About</a></li>
 </ul>
 </div>
