Adding favicon and crap

--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -10,6 +10,8 @@
 <meta data-lift="Copyright.meta" name="copyright" content="Joe Barnes. Copyright (c) 2012 - Eternity"/>
 <link rel="stylesheet" href="/css/foundation.css"/>
 <script src="/js/vendor/modernizr.js"></script>
+<link rel="shortcut icon" href="/favicon.png" />
+<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 </head>
 <body>
  
@@ -113,7 +115,7 @@
 </div>
 </footer>
 <script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
-<script src="js/foundation.min.js"></script>
+<script src="/js/foundation.min.js"></script>
 <script>
     $(document).foundation();
   </script>
