--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -22,7 +22,7 @@
 <li><a href="/" class="button">Home</a></li>
 <li><a href="/tags" class="button">Tags</a></li>
 <li><a href="/archive" class="button">Archive</a></li>
-<li><a href="/about" class="button">About</a></li>
+<!--<li><a href="/about" class="button">About</a></li>-->
 </ul>
 </div>
 <h1>prose :: and :: conz</h1>
@@ -108,7 +108,7 @@
 <li><a href="/">Home</a></li>
 <li><a href="/tags">Tags</a></li>
 <li><a href="/archive">Archive</a></li>
-<li><a href="/about">About</a></li>
+<!--<li><a href="/about">About</a></li>-->
 </ul>
 </div>
 </div>
