Added the pac yin yang logo

--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -9,6 +9,7 @@
 <meta name="author" content="Joe Barnes"/>
 <meta data-lift="Copyright.meta" name="copyright" content="Joe Barnes. Copyright (c) 2012 - Eternity"/>
 <link rel="stylesheet" href="/css/foundation.css"/>
+<link rel="stylesheet" href="/css/pac.css"/>
 <script src="/js/vendor/modernizr.js"></script>
 <link rel="shortcut icon" href="/favicon.png" />
 <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
@@ -25,7 +26,7 @@
 <!--<li><a href="/about" class="button">About</a></li>-->
 </ul>
 </div>
-<h1>prose :: and :: conz</h1>
+<h1><img class="header-img" src="/images/pacyang.png">&nbsp;prose :: and :: conz</h1>
 <hr/>
 </div>
 </div>
