--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -13,6 +13,7 @@
 <script src="/js/vendor/modernizr.js"></script>
 <link rel="shortcut icon" href="/favicon.png" />
 <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+<style type="text/css" id="syntaxhighlighteranchor"></style>
 </head>
 <body>
  
@@ -126,5 +127,13 @@
       var doc = document.documentElement;
       doc.setAttribute('data-useragent', navigator.userAgent);
     </script>
+<link href="/css/syntax-highlighter/shThemeDefault.css" rel="stylesheet" type="text/css" />
+<script src="/js/syntax-highlighter/shCore.js" type="text/javascript"></script>
+<script src="/js/syntax-highlighter/shAutoloader.js" type="text/javascript"></script>
+<script src="/js/syntax-highlighter/shBrushJava.js" type="text/javascript"></script>
+<script src="/js/syntax-highlighter/shBrushScala.js" type="text/javascript"></script>
+<script src="/js/syntax-highlighter/shBrushPlain.js" type="text/javascript"></script>
+<script src="/js/syntax-highlighter/setup.js" type='text/javascript'></script>
+
 </body>
 </html>
