--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,13 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head><meta content="text/html; charset=UTF-8" http-equiv="content-type" /><title>Home</title></head>
   <body class="lift:content_id=main">
-    <div id="main" class="lift:surround?with=default;at=content">
-      <h2>Welcome to your project!</h2>
-      <p>
-	<span class="lift:helloWorld.howdy">
-	  Welcome to your Lift app at <span id="time">Time goes here</span>
-	</span>
-      </p>
+    <div id="main" class="lift:surround?with=foundation;at=content">
+      <div data-lift="Posts?count=4"></div>
     </div>
   </body>
 </html>
