--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -132,6 +132,7 @@
 <script src="/js/syntax-highlighter/shAutoloader.js" type="text/javascript"></script>
 <script src="/js/syntax-highlighter/shBrushJava.js" type="text/javascript"></script>
 <script src="/js/syntax-highlighter/shBrushScala.js" type="text/javascript"></script>
+<script src="/js/syntax-highlighter/shBrushJScript.js" type="text/javascript"></script>
 <script src="/js/syntax-highlighter/shBrushPlain.js" type="text/javascript"></script>
 <script src="/js/syntax-highlighter/setup.js" type='text/javascript'></script>
 
