Adding the cpp highlighter for the one post I used it in

--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -133,6 +133,7 @@
 <script src="/js/syntax-highlighter/shBrushJava.js" type="text/javascript"></script>
 <script src="/js/syntax-highlighter/shBrushScala.js" type="text/javascript"></script>
 <script src="/js/syntax-highlighter/shBrushJScript.js" type="text/javascript"></script>
+<script src="/js/syntax-highlighter/shBrushCpp.js" type="text/javascript"></script>
 <script src="/js/syntax-highlighter/shBrushPlain.js" type="text/javascript"></script>
 <script src="/js/syntax-highlighter/setup.js" type='text/javascript'></script>
 
