Using Tags snip to populate both the Tags page and the Top Tags right panel

--- a/src/main/webapp/tags.html
+++ b/src/main/webapp/tags.html
@@ -3,7 +3,9 @@
   <head><meta content="text/html; charset=UTF-8" http-equiv="content-type" /><title>Home</title></head>
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=foundation;at=content">
-      <div data-lift="Tags"></div>
+      <div data-lift="Tags">
+        <h2 class="tag"></h2>
+      </div>
     </div>
   </body>
 </html>
