--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -73,14 +73,15 @@
 
  
 <aside class="large-3 columns">
-<h5>Tags</h5>
-  <ul class="side-nav">
-    <li><a href="#">Scala</a></li>
-    <li><a href="#">Functional Programming</a></li>
-    <li><a href="#">Static Typing</a></li>
-    <li><a href="#">Java</a></li>
-    <li><a href="#">Web Development</a></li>
+<h5>Top Tags</h5>
+  <ul class="side-nav" data-lift="Tags?count=5">
+    <li class="tag"><a href="#">Scala</a></li>
+    <li class="clearable"><a href="#">Functional Programming</a></li>
+    <li class="clearable"><a href="#">Static Typing</a></li>
+    <li class="clearable"><a href="#">Java</a></li>
+    <li class="clearable"><a href="#">Web Development</a></li>
   </ul>
+  <a href="/tags">See All &rarr;</a>
 <hr>
 <div class="panel">
 <h5>Latest</h5>
