I think this is good enough for rss...

--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -14,6 +14,7 @@
 <link rel="shortcut icon" href="/favicon.png" />
 <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 <style type="text/css" id="syntaxhighlighteranchor"></style>
+<link rel="alternate" type="application/rss+xml" href="http://proseand.co.nz/feed" title="prose :: and :: conz by joescii">
 </head>
 <body>
  
