First swing at an atom feed

--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -15,6 +15,7 @@
 <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 <style type="text/css" id="syntaxhighlighteranchor"></style>
 <link rel="alternate" type="application/rss+xml" href="http://proseand.co.nz/feed" title="prose :: and :: conz by joescii">
+<link rel="alternate" type="application/atom+xml" href="http://proseand.co.nz/atom" title="prose :: and :: conz by joescii">
 </head>
 <body>
  
