Latest and random post in right panel now show a real preview

--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -85,15 +85,17 @@
   </ul>
   <a href="/tags">See All &rarr;</a>
 <hr>
-<div class="panel">
-<h5>Latest</h5>
-<p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
+<div class="panel" data-lift="Preview.latest">
+<h5>Latest Post</h5>
+<h6 class="title">Title</h6>
+<p class="description">Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
 <a href="#">Read More &rarr;</a>
 </div>
 <hr>
-<div class="panel">
-<h5>Random</h5>
-<p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
+<div class="panel" data-lift="Preview.random">
+<h5>Random Post</h5>
+<h6 class="title">Title</h6>
+<p class="description">Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
 <a href="#">Read More &rarr;</a>
 </div>
 </aside>
