Added links for prev/next posts

--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -71,6 +71,10 @@
 <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
 </article>
 </div>
+  <div data-lift="PreviousNext">
+    <a class="prev" href="#">&larr; <span class="prev-title">Previous</span></a>
+    <a class="next right" href="#"><span class="next-title">Next</span> &rarr;</a>
+  </div>
 </div>
 
  
