--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -17,7 +17,7 @@
 <link rel="alternate" type="application/rss+xml" href="http://proseand.co.nz/feed" title="prose :: and :: conz by joescii">
 <link rel="alternate" type="application/atom+xml" href="http://proseand.co.nz/atom" title="prose :: and :: conz by joescii">
   <!-- Google Analytics -->
-  <script>
+  <script data-lift="ProductionOnly">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
