Adding in-view.js for grabbing stuff as the user scrolls

--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -89,7 +89,7 @@
   </div>
 </div>
 
- 
+
 <aside class="large-3 columns">
 <h5>Top Tags</h5>
   <ul class="side-nav" data-lift="Tags?count=5">
@@ -138,6 +138,7 @@
 </div>
 </footer>
 <script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
+<script type="application/javascript" src="/js/in-view.js"></script>
 <script src="/js/foundation.min.js"></script>
 <script>
     $(document).foundation();
