--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -138,6 +138,7 @@
 </div>
 </footer>
 <script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
+<script type="application/javascript" src="/js/pac.js"></script>
 <script type="application/javascript" src="/js/in-view.js"></script>
 <script src="/js/foundation.min.js"></script>
 <script>
