--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -161,5 +161,23 @@
 <script src="/js/syntax-highlighter/shBrushPlain.js" type="text/javascript"></script>
 <script src="/js/syntax-highlighter/setup.js" type='text/javascript'></script>
 
+<!-- https://dev.twitter.com/web/javascript/loading -->
+<script>window.twttr = (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0],
+    t = window.twttr || {};
+  if (d.getElementById(id)) return;
+  js = d.createElement(s);
+  js.id = id;
+  js.src = "https://platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+
+  t._e = [];
+  t.ready = function(f) {
+    t._e.push(f);
+  };
+
+  return t;
+}(document, "script", "twitter-wjs"));</script>
+
 </body>
 </html>
