Adding NFJS calendar, but the bottom is a bit chopped off

--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -114,6 +114,17 @@
 <p class="description">Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
 <a href="#">Read More &rarr;</a>
 </div>
+<hr>
+<a href="http://nofluffjuststuff.com">
+<img src="http://nofluffjuststuff.com/images/nfjs_logo200.gif" alt="No Fluff Just Stuff" style="width:100%;" /> </a>
+<hr>
+<iframe src="https://www.google.com/calendar/embed?title=My%20NFJS%20Sessions&showTitle=0&showNav=0&showDate=0&showPrint=0&showTabs=0&showCalendars=0&mode=AGENDA&height=300&wkst=1&bgcolor=%23FFFFFF&src=8rq648too8qi9f744ean859hmso1gfgk%40import.calendar.google.com&color=%23333333&ctz=America%2FChicago"
+        frameborder="0"
+        width="100%"
+        height="300"
+        marginheight="0"
+        marginwidth="0">
+</iframe>
 </aside>
  
 </div>
