--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -115,6 +115,9 @@
 <a href="#">Read More &rarr;</a>
 </div>
 <hr>
+  <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/joescii" data-widget-id="332226033178787840">Tweets by @joescii</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<hr>
 <a href="http://nofluffjuststuff.com">
 <img src="http://nofluffjuststuff.com/images/nfjs_logo200.gif" alt="No Fluff Just Stuff" style="width:100%;" /> </a>
 <hr>
