--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -121,13 +121,22 @@
 <a href="http://nofluffjuststuff.com">
 <img src="http://nofluffjuststuff.com/images/nfjs_logo200.gif" alt="No Fluff Just Stuff" style="width:100%;" /> </a>
 <hr>
-<iframe src="https://www.google.com/calendar/embed?title=My%20NFJS%20Sessions&showTitle=0&showNav=0&showDate=0&showPrint=0&showTabs=0&showCalendars=0&mode=AGENDA&height=300&wkst=1&bgcolor=%23FFFFFF&src=8rq648too8qi9f744ean859hmso1gfgk%40import.calendar.google.com&color=%23333333&ctz=America%2FChicago"
-        frameborder="0"
+<h5>Speaking engagements</h5>
+<!--<iframe src="https://www.google.com/calendar/embed?title=My%20NFJS%20Sessions&showTitle=0&showNav=0&showDate=0&showPrint=0&showTabs=0&showCalendars=0&mode=AGENDA&height=300&wkst=1&bgcolor=%23FFFFFF&src=8rq648too8qi9f744ean859hmso1gfgk%40import.calendar.google.com&color=%23333333&ctz=America%2FChicago"-->
+        <!--frameborder="0"-->
+        <!--width="100%"-->
+        <!--height="300"-->
+        <!--marginheight="0"-->
+        <!--marginwidth="0">-->
+<!--</iframe>-->
+<iframe src="https://www.google.com/calendar/embed?title=Speaking%20Engagements&amp;showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=350&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=0gjftt05sqcelqu6b5r10013bo%40group.calendar.google.com&amp;color=%23A32929&amp;src=8rq648too8qi9f744ean859hmso1gfgk%40import.calendar.google.com&amp;color=%23333333&amp;ctz=America%2FChicago"
+        style=" border-width:0 "
         width="100%"
-        height="300"
-        marginheight="0"
-        marginwidth="0">
+        height="350"
+        frameborder="0"
+        scrolling="no">
 </iframe>
+<hr>
 </aside>
  
 </div>
