--- a/src/main/webapp/templates-hidden/foundation.html
+++ b/src/main/webapp/templates-hidden/foundation.html
@@ -41,7 +41,7 @@
 <!--<li><a href="/about" class="button">About</a></li>-->
 </ul>
 </div>
-<h1><img class="header-img" src="/images/pacyang.png"><span class="pac-title">prose :: and :: conz</span></h1>
+<h1><a href="/"><img class="header-img" src="/images/pacyang.png"></a><a href="/" class="pac-title">prose :: and :: conz</a></h1>
 <hr/>
 </div>
 </div>
