--- a/src/main/webapp/templates-hidden/right-panel.html
+++ b/src/main/webapp/templates-hidden/right-panel.html
@@ -27,7 +27,7 @@
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   <hr>
   <a href="http://nofluffjuststuff.com">
-    <img src="http://nofluffjuststuff.com/images/nfjs_logo200.gif" alt="No Fluff Just Stuff" style="width:100%;" /> </a>
+    <img class="center" src="http://nofluffjuststuff.com/images/nfjs_logo200.gif" alt="No Fluff Just Stuff"/> </a>
   <hr>
   <h5>Speaking engagements</h5>
   <iframe src="https://www.google.com/calendar/embed?title=Speaking%20Engagements&amp;showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=AGENDA&amp;height=350&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=0gjftt05sqcelqu6b5r10013bo%40group.calendar.google.com&amp;color=%23A32929&amp;src=8rq648too8qi9f744ean859hmso1gfgk%40import.calendar.google.com&amp;color=%23333333&amp;ctz=America%2FChicago"
